--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "dabhi",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/mongoose": "^5.5.28",
-    "body-parser": "^1.19.0",
-    "bug-killer": "^4.4.4",
-    "compression": "^1.7.4",
-    "ejs": "^2.7.1",
-    "express": "^4.17.1",
-    "helmet": "^3.21.2",
-    "jsonwebtoken": "^8.5.1",
-    "lien": "^3.3.0",
-    "moment": "^2.24.0",
-    "mongoose": "^5.7.3",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.3.0",
-    "nodemon": "^1.19.3",
-    "open": "^7.0.0",
-    "pretty-bytes": "^5.3.0",
-    "r-json": "^1.2.9",
-    "request": "^2.88.0",
-    "video.js": "^7.6.6",
-    "youtube-api": "^2.0.10"
-  }
+    "name": "dabhi",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
+    "engines": {
+        "node": "10.16.0"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@types/mongoose": "^5.5.28",
+        "body-parser": "^1.19.0",
+        "bug-killer": "^4.4.4",
+        "compression": "^1.7.4",
+        "ejs": "^2.7.1",
+        "express": "^4.17.1",
+        "helmet": "^3.21.2",
+        "jsonwebtoken": "^8.5.1",
+        "lien": "^3.3.0",
+        "moment": "^2.24.0",
+        "mongoose": "^5.7.3",
+        "multer": "^1.4.2",
+        "nodemailer": "^6.3.0",
+        "nodemon": "^1.19.3",
+        "open": "^7.0.0",
+        "pretty-bytes": "^5.3.0",
+        "r-json": "^1.2.9",
+        "request": "^2.88.0",
+        "video.js": "^7.6.6",
+        "youtube-api": "^2.0.10"
+    }
 }
